@@ -11,9 +11,129 @@ import random
 import mod.ModMcpython
 import traceback
 import logger
+import event.Registry
+import block.BoundingBox
 
 
 class BlockStateNotNeeded(Exception): pass
+
+
+class IBlockStateDecoder(event.Registry.IRegistryContent):
+    TYPE = "minecraft:blockstate"
+
+    # for developers of mods: add an entry called "mod_marker" storing the mod name the loader is implemented in and
+    # check for it here
+    @classmethod
+    def is_valid(cls, data: dict) -> bool: raise NotImplementedError()
+
+    def __init__(self, data: dict, block_state):
+        self.data = data
+        self.block_state = block_state
+
+    def add_face_to_batch(self, block, batch, face):
+        return []
+
+    def transform_to_hitbox(self, block): raise NotImplementedError()
+
+
+blockstatedecoderregistry = event.Registry.Registry("blockstates", ["minecraft:blockstate"])
+
+
+@G.registry
+class MultiPartDecoder(IBlockStateDecoder):
+    NAME = "minecraft:multipart_blockstate_loader"
+
+    @classmethod
+    def is_valid(cls, data: dict) -> bool:
+        return "multipart" in data and "forge_marker" not in data and "mod_marker" not in data
+
+    def __init__(self, data: dict, block_state):
+        super().__init__(data, block_state)
+        for entry in data["multipart"]:
+            G.modelhandler.used_models.append(entry["apply"]["model"])
+
+    def add_face_to_batch(self, block, batch, face):
+        state = block.get_model_state()
+        result = []
+        for entry in self.data["multipart"]:
+            if "when" not in entry or self._test_for(state, entry["when"]):
+                model, config = BlockState.decode_entry(entry["apply"])
+                result += G.modelhandler.models[model].add_face_to_batch(block.position, batch, config, face)
+        return result
+
+    @staticmethod
+    def _test_for(state, part):
+        for key in part:
+            if key not in state or state[key] != part[key]: return False
+        return True
+
+    def transform_to_hitbox(self, blockinstance):
+        state = blockinstance.get_model_state()
+        bbox = block.BoundingBox.BoundingArea()
+        for entry in self.data["multipart"]:
+            if "when" not in entry or self._test_for(state, entry["when"]):
+                model, config = BlockState.decode_entry(entry["apply"])
+                model = G.modelhandler.models[model]
+                for boxmodel in model.boxmodels:
+                    bbox.bboxes.append(block.BoundingBox.BoundingBox(tuple([e / 16 for e in boxmodel.boxsize]),
+                                                                     tuple([e / 16 for e in boxmodel.rposition])))
+        return bbox
+
+
+@G.registry
+class DefaultDecoder(IBlockStateDecoder):
+    NAME = "minecraft:default_blockstate_loader"
+
+    @classmethod
+    def is_valid(cls, data: dict) -> bool:
+        return "variants" in data and "forge_marker" not in data and "mod_marker" not in data
+
+    def __init__(self, data: dict, block_state):
+        super().__init__(data, block_state)
+        self.states = []
+        for element in data["variants"].keys():
+            if element.count("=") > 0:
+                keymap = {}
+                for e in element.split(","):
+                    keymap[e.split("=")[0]] = e.split("=")[1]
+            else:
+                keymap = {}
+            self.states.append((keymap, BlockState(data["variants"][element])))
+
+    def add_face_to_batch(self, block, batch, face):
+        data = block.get_model_state()
+        for keymap, blockstate in self.states:
+            if keymap == data:
+                return blockstate.add_face_to_batch(block, batch, face)
+        return []
+
+    def transform_to_hitbox(self, blockinstance):
+        if blockinstance.block_state is None: blockinstance.block_state = 0
+        data = blockinstance.get_model_state()
+        bbox = block.BoundingBox.BoundingArea()
+        for keymap, blockstate in self.states:
+            if keymap == data:
+                model = G.modelhandler.models[blockstate.models[blockinstance.block_state][0]]
+                for boxmodel in model.boxmodels:
+                    bbox.bboxes.append(block.BoundingBox.BoundingBox(tuple([e / 16 for e in boxmodel.boxsize]),
+                                                                     tuple([e / 16 for e in boxmodel.rposition])))
+        return bbox
+
+
+"""
+@G.registry
+class ForgeVersionDecoder(IBlockStateDecoder):
+    @classmethod
+    def is_valid(cls, data: dict) -> bool:
+        return "forge_marker" in data and data["forge_marker"] == 1 and "mod_marker" not in data
+
+    def __init__(self, data: dict, block_state):
+        super().__init__(data, block_state)
+
+    def add_face_to_batch(self, block, batch, face):
+        return []
+
+    def transform_to_hitbox(self, block): raise NotImplementedError()"""
 
 
 class BlockStateDefinition:
@@ -60,22 +180,15 @@ class BlockStateDefinition:
     def __init__(self, data: dict, name: str):
         if name not in G.registry.get_by_name("block").registered_object_map: raise BlockStateNotNeeded()
         G.modelhandler.blockstates[name] = self
-        self.states = []
-        if "variants" in data:
-            for element in data["variants"].keys():
-                if element.count("=") > 0:
-                    keymap = {}
-                    for e in element.split(","):
-                        keymap[e.split("=")[0]] = e.split("=")[1]
-                else:
-                    keymap = {}
-                self.states.append((keymap, BlockState(data["variants"][element])))
+        self.loader = None
+        for loader in blockstatedecoderregistry.registered_object_map.values():
+            if loader.is_valid(data):
+                self.loader = loader(data, self)
+                break
+        else:
+            raise ValueError("can't find matching loader for model {}".format(name))
 
-    def get_state_for(self, data: dict):
-        for keymap, blockstate in self.states:
-            if keymap == data:
-                return blockstate
-        return None
+    def add_face_to_batch(self, block, batch, face): return self.loader.add_face_to_batch(block, batch, face)
 
 
 class BlockState:
@@ -83,15 +196,15 @@ class BlockState:
         self.models = []  # (model, config)
         if type(data) == dict:
             if "model" in data:
-                self.models.append(self._decode_entry(data))
+                self.models.append(self.decode_entry(data))
                 G.modelhandler.used_models.append(data["model"])
         elif type(data) == list:
-            models = [self._decode_entry(x) for x in data]
+            models = [self.decode_entry(x) for x in data]
             self.models += models
             G.modelhandler.used_models += [x[0] for x in models]
 
     @staticmethod
-    def _decode_entry(data: dict):
+    def decode_entry(data: dict):
         model = data["model"]
         G.modelhandler.used_models.append(model)
         rotations = (data["x"] if "x" in data else 0, data["y"] if "y" in data else 0,
@@ -99,7 +212,6 @@ class BlockState:
         return model, {"rotation": rotations}
 
     def add_face_to_batch(self, block, batch, face):
-        # todo: add some more functionality to this
         if block.block_state is None:
             block.block_state = random.randint(1, len(self.models)) - 1
         result = []
