@@ -140,6 +140,9 @@ class StateBlockItemGenerator(State.State):
             # event.TickHandler.handler.bind(self.add_new_screen, self.SETUP_TIME)
             traceback.print_exc()
             return
+        except:
+            print(self.tasks[self.blockindex])
+            raise
         self.parts[1].progress = self.blockindex+1
         self.parts[1].text = "{}/{}: {}".format(self.blockindex+1, len(self.tasks), self.tasks[self.blockindex])
         # todo: add states
